kompose/datatypehandler-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.network/database: "true"
    io.kompose.service: datatypehandler
  name: datatypehandler
spec:
  containers:
    - env:
        - name: DATABASE_NAME
          value: database
        - name: DATABASE_PORT
          value: "27017"
        - name: DATABASE_REPLICA_SET
          value: replica_set
        - name: DATABASE_URL
          value: mongodb://root:owl45#21@databaseprimary,databasesecondary
      image: 10.40.0.120:5050/data_type_handler
      name: datatypehandler
      ports:
        - containerPort: 5003
      resources: {}
  restartPolicy: OnFailure
status: {}
