kompose/model-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.network/database: "true"
    io.kompose.service: model
  name: model
spec:
  containers:
    - env:
        - name: DATABASE_NAME
          value: database
        - name: DATABASE_PORT
          value: "27017"
        - name: DATABASE_REPLICA_SET
          value: replica_set
        - name: DATABASE_URL
          value: mongodb://root:owl45#21@databaseprimary,databasesecondary
      image: 10.40.0.120:5050/model
      name: model
      ports:
        - containerPort: 5007
      resources: {}
      volumeMounts:
        - mountPath: /code_executions
          name: code-executor
        - mountPath: /explore
          name: database-executor
        - mountPath: /transform
          name: database-executor
        - mountPath: /models
          name: model
        - mountPath: /binaries
          name: binary-executor
  restartPolicy: OnFailure
  volumes:
    - name: code-executor
      persistentVolumeClaim:
        claimName: code-executor
    - name: database-executor
      persistentVolumeClaim:
        claimName: database-executor
    - name: model
      persistentVolumeClaim:
        claimName: model
    - name: binary-executor
      persistentVolumeClaim:
        claimName: binary-executor
status: {}
