kompose/portainer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: portainer
  name: portainer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: portainer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.23.0 (bc7d9f4f)
      creationTimestamp: null
      labels:
        io.kompose.network/portainer: "true"
        io.kompose.service: portainer
    spec:
      containers:
        - args:
            - -H
            - tcp://tasks.agent:9001
            - --tlsskipverify
          image: portainer/portainer-ce:2.1.1-alpine
          name: portainer
          ports:
            - containerPort: 9000
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: portainer
      restartPolicy: Always
      volumes:
        - name: portainer
          persistentVolumeClaim:
            claimName: portainer
status: {}
