kompose/projection-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.network/database: "true"
    io.kompose.network/spark: "true"
    io.kompose.service: projection
  name: projection
spec:
  containers:
    - env:
        - name: DATABASE_NAME
          value: database
        - name: DATABASE_PORT
          value: "27017"
        - name: DATABASE_REPLICA_SET
          value: replica_set
        - name: DATABASE_URL
          value: mongodb://root:owl45#21@databaseprimary,databasesecondary
      image: 10.40.0.120:5050/projection
      name: projection
      ports:
        - containerPort: 5001
        - containerPort: 41000
      resources: {}
  restartPolicy: OnFailure
status: {}
