kompose/binaryexecutor-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: binaryexecutor
  name: binaryexecutor
spec:
  ports:
    - name: "5008"
      port: 5008
      targetPort: 5008
  selector:
    io.kompose.service: binaryexecutor
status:
  loadBalancer: {}
