kompose/builder-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: builder
  name: builder
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 5002
    - name: "41100"
      port: 41100
      targetPort: 41100
  selector:
    io.kompose.service: builder
status:
  loadBalancer: {}
