kompose/model-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: model
  name: model
spec:
  ports:
    - name: "5007"
      port: 5007
      targetPort: 5007
  selector:
    io.kompose.service: model
status:
  loadBalancer: {}
