kompose/observer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: observer
  name: observer
spec:
  ports:
    - name: "5010"
      port: 5010
      targetPort: 5010
  selector:
    io.kompose.service: observer
status:
  loadBalancer: {}
