kompose/portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: portainer
  name: portainer
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: portainer
status:
  loadBalancer: {}
